<resources>
    <string name="app_name">TranslateX</string>
    <string name="every_word_matters">.....Every Word Matters.....</string>
    <string name="translated_text_hint">Translated Text</string>
    <string name="downloaded_models_label">Downloaded models: %1$s</string>
    <string name="translate_progress">Translating&#8230;</string>
    <string name="delete_model">Delete Model</string>
    <string name="download_model">Download Model</string>
    <string name="unknown_error">Unknown error occurred.</string>
    <string name="source_text_hint">Source text</string>

    <string name="translated_text">Translated Text</string>
    <string name="or">OR</string>
</resources>